--- a/frontend/src/components/AddALandlord.module.css
+++ b/frontend/src/components/AddALandlord.module.css
@@ -268,17 +268,20 @@ html, body {
     display: flex; /* Align columns in a row */
     flex-direction: column;
     gap: 20px; /* Space between columns */
-    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+    background-color: #aaadcf; /* Semi-transparent white background */
     border: 1px solid rgba(0, 0, 0, 0.5); /* Optional border for definition */
     border-radius: 20px; /* Rounded corners */
     padding: 20px; /* Space inside the container */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional shadow for depth */
-    width: 500px;
-    height: 450px;
+    width: 680px;
+    height: 520px;
     z-index: 1000px;
     position: relative;
-    bottom: -50px;
-    left: 15px;
+    bottom: -40px;
+    left: -15px;
+    justify-content: center; /* Center elements vertically */
+    align-items: left; /* Center elements horizontally */
+    font-weight: bold;
 }
 
 .add-a-landlord-additional-input-box {
